--- a/bert-official-config-train/QuAC/train_config_hf_bert_base.yaml
+++ b/bert-official-config-train/QuAC/train_config_hf_bert_base.yaml
@@ -1,10 +1,10 @@
-bottleneck_size: 25
-add_cross_attention: False
-exp_name: DoQAsep_hf_bert_base_uncased_bottleneck_16
-epoches: 20
+bottleneck_size: 1
+add_cross_attention: false
+exp_name: DoQAsep_hf_bert_base_uncased_bottleneck_quac
+epoches: 10
 weight_decay: 0.0
 learning_rate: 0.00005
-warmup_steps: 500
+warmup_steps: 5000
 adam_epsilon: 1.0e-12
 adam_beta1: 0.9
 adam_beta2: 0.999
@@ -14,23 +14,26 @@ local_rank: -1
 seed: 42
 num_labels: 2
 dialog_labels: 2
-fp16: False
+fp16: true
 max_grad_norm: 1.0
-logging_steps: 50
-save_steps: 50
-output_dir: ../CQAModel/DoQA/Bert-base-HF_16/sep-dev-in_training
+logging_steps: 500
+save_steps: 500
+output_dir: ../CQAModel/QuAC/Bert-base-HF_16/sep-dev-in_training
 evaluate_during_training: True
 version_2_with_negative: False
 verbose_logging: True
-max_answer_length: 40
+max_answer_length: 60
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
-train_feature_file: ../preprocessing_files/devsplit_in_train/bert/sep_doqa/doqa_train_file_cooking
-eval_feature_file: ../preprocessing_files/devsplit_in_train/bert/sep_doqa/doqa_dev_file_cooking
+train_feature_file: ../preprocessing_files/bert/QuAC/base_train_truncated
+eval_feature_file: ../preprocessing_files/bert/QuAC/base_dev_truncated
+eval_json: ../dataset_local/quac/val_v0.2.json
 
 model: BERTQA_memory
 pretrained_name: bert-base-uncased
+pretrained_tokenizer: BertTokenizer
+
 
 model_config:
   pos_att_type: "c2p|p2c"
