modify QuAC postprocessing, and preprocessing

--- a/bert-official-config-train/QuAC/train_config_original_bert_base.yaml
+++ b/bert-official-config-train/QuAC/train_config_original_bert_base.yaml
@@ -1,14 +1,14 @@
 bottleneck_size: 1
-exp_name: DoQAsep_bert_base_uncased_quac
-epoches: 15
+exp_name: DoQAsep_bert_base_uncased_quac_pohancomputer
+epoches: 10
 weight_decay: 0.0
 learning_rate: 0.00005
 warmup_steps: 5000
 adam_epsilon: 1.0e-12
 adam_beta1: 0.9
 adam_beta2: 0.999
-batch_size: 2
-gradient_accumulation_steps: 24
+batch_size: 3
+gradient_accumulation_steps: 16
 local_rank: -1
 seed: 42
 num_labels: 2
@@ -19,14 +19,15 @@ logging_steps: 500
 save_steps: 500
 output_dir: ../CQAModel/QuAC/Bert-base/sep-dev-in_training
 evaluate_during_training: True
-version_2_with_negative: False
+version_2_with_negative: True
 verbose_logging: True
-max_answer_length: 60
+max_answer_length: 30
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
-train_feature_file: preprocessing_files/bert/QuAC/train
-eval_feature_file: preprocessing_files/bert/QuAC/dev
+train_feature_file: ../preprocessing_files/bert/QuAC/base_train_truncated
+eval_feature_file: ../preprocessing_files/bert/QuAC/base_dev_truncated
+eval_json: ../dataset_local/quac/val_v0.2.json
 
 model: BERTQA
 pretrained_name: bert-base-uncased
