--- a/preprocessing_configs/bert/QuAC/base_prepro_train_truncated.yaml
+++ b/preprocessing_configs/bert/QuAC/base_prepro_train_truncated.yaml
@@ -4,7 +4,7 @@ is_dev: false
 stride: 128
 seq_length: 384
 is_training: true
-json_path: ./quac/train_v0.2.json
-output_name: ./preprocessing_files/bert/QuAC/base_train_truncated
+json_path: ../dataset_local/quac/train_v0.2.json
+output_name: ../preprocessing_files/bert/QuAC/base_train_truncated
 pretrained_tokenizer: BertTokenizer
 pretrained_name: bert-base-uncased
