--- a/bert-official-config-train/QuAC/train_config_hf_bert_base.yaml
+++ b/bert-official-config-train/QuAC/train_config_hf_bert_base.yaml
@@ -1,6 +1,6 @@
 bottleneck_size: 16
 add_cross_attention: false
-exp_name: DoQAsep_hf_bert_base_uncased_bottleneck_quac
+exp_name: DoQAsep_hf_bert_base_uncased_bottleneck_quac_pohancomputer
 epoches: 10
 weight_decay: 0.0
 learning_rate: 0.00005
@@ -14,7 +14,7 @@ local_rank: -1
 seed: 42
 num_labels: 2
 dialog_labels: 2
-fp16: true
+fp16: False
 max_grad_norm: 1.0
 logging_steps: 500
 save_steps: 500
@@ -22,7 +22,7 @@ output_dir: ../CQAModel/QuAC/Bert-base-HF_16/sep-dev-in_training
 evaluate_during_training: True
 version_2_with_negative: False
 verbose_logging: True
-max_answer_length: 60
+max_answer_length: 30
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
