--- a/create_feature/bert_test_doqa_travel.yaml
+++ b/create_feature/bert_test_doqa_travel.yaml
@@ -3,4 +3,4 @@ mode: "test"
 is_dev: false
 is_training: false
 ratio: 1
-output_name: bert/sep_doqa/doqa_test_file_travel
+output_name: ../preprocessing_files/bert/DoQA/test_file_travel_v2
