--- a/create_feature/bert_train_doqa_cooking.yaml
+++ b/create_feature/bert_train_doqa_cooking.yaml
@@ -3,4 +3,4 @@ mode: "train"
 is_dev: False
 is_training: True
 ratio: 0.9
-output_name: ./bert/sep_doqa/doqa_train_file_cooking
+output_name: ../preprocessing_files/bert/DoQA/train_file_cooking_v2
