--- a/bert-official-config-train/QuAC/train_config_hf_bert_base_HAE.yaml
+++ b/bert-official-config-train/QuAC/train_config_hf_bert_base_HAE.yaml
@@ -1,6 +1,6 @@
 bottleneck_size: 16
 add_cross_attention: false
-exp_name: DoQAsep_hf_bert_base_uncased_bottleneck_quac_mematt_layer1_on_both_layer12_mem_to_doc
+exp_name: DoQAsep_hf_bert_HAE
 epoches: 10
 weight_decay: 0.0
 learning_rate: 0.00005
@@ -18,7 +18,7 @@ fp16: False
 max_grad_norm: 1.0
 logging_steps: 1000
 save_steps: 1000
-output_dir: ../CQAModel/QuAC/Bert-base18_just_layer1_on_both_layer12_mem_to_doc/sep-dev-in_training
+output_dir: ../CQAModel/QuAC/Bert-base-HAE/sep-dev-in_training
 evaluate_during_training: True
 version_2_with_negative: True
 verbose_logging: True
@@ -26,11 +26,11 @@ max_answer_length: 30
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
-train_feature_file: ../preprocessing_files/bert/QuAC/base_train_truncated
-eval_feature_file: ../preprocessing_files/bert/QuAC/base_dev_truncated
+train_feature_file: ../preprocessing_files/bert/QuAC/base_train_truncated_HAE
+eval_feature_file: ../preprocessing_files/bert/QuAC/base_dev_truncated_HAE
 eval_json: ../dataset_local/quac/val_v0.2.json
 
-model: BERTQA_memory18
+model: BERTQA_memory_HAE
 pretrained_name: bert-base-uncased
 pretrained_tokenizer: BertTokenizer
 
