--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 numpy==1.18.4
 torch==1.7.0
-tokenizers==0.8.1
+tokenizers==0.8.1rc2
 torch_optimizer==0.1.0
 datasets==1.0.1
 filelock==3.0.12
 wandb==0.8.36
+transformers==3.1.0
+sentencepiece==0.1.96
+sacremoses==0.0.45
+spacy==2.2.0
+regex
+packaging
