rename and add QuAC/CoQA

--- a/bert-official-config-train/CoQA/train_config_hf_bert_base.yaml
+++ b/bert-official-config-train/CoQA/train_config_hf_bert_base.yaml
@@ -1,36 +1,36 @@
 bottleneck_size: 25
 add_cross_attention: False
-exp_name: DoQAsep_coqa_baseline
-epoches: 10
+exp_name: CoQA_BERT_HHF
+epoches: 3
 weight_decay: 0.0
 learning_rate: 0.00005
 warmup_steps: 1000
-adam_epsilon: 1.0e-12
+adam_epsilon: 1.0e-6
 adam_beta1: 0.9
 adam_beta2: 0.999
-batch_size: 3
-gradient_accumulation_steps: 16
+batch_size: 8
+gradient_accumulation_steps: 3
 local_rank: -1
 seed: 42
 num_labels: 2
 dialog_labels: 4
 fp16: false
-max_grad_norm: 1.0
+max_grad_norm: 10.0
 logging_steps: 1000
 save_steps: 1000
-output_dir: ../CQAModel/CoQA/Bert_HistoryModule/sep-dev-in_training
+output_dir: ../CQAModel/CoQA/Bert_HHF/
 evaluate_during_training: True
 version_2_with_negative: True
 verbose_logging: True
-max_answer_length: 30
+max_answer_length: 17
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
-train_feature_file: ../preprocessing_files/bert/CoQA/train_clean_truncated
-eval_feature_file: ../preprocessing_files/bert/CoQA/dev_clean_truncated
-eval_json: ../dataset_local/coqa/coqa-dev-v1.0.json
+train_feature_file: ../preprocessing_files/bert/CoQA/clean_base_train_file_HAE
+eval_feature_file: ../preprocessing_files/bert/CoQA/clean_base_dev_file_HAE
+eval_json: ../dataset_local/CoQA/coqa-dev-v1.0.json
 
-model: BERTQA_memory
+model: BERTQA_HHF_coqa
 pretrained_name: bert-base-uncased
 pretrained_tokenizer: BertTokenizer
 
