--- a/bert-official-config-train/CoQA/train_config_hisbert_base.yaml
+++ b/bert-official-config-train/CoQA/train_config_hisbert_base.yaml
@@ -1,38 +1,38 @@
-bottleneck_size: 1
-exp_name: QuAC_Bert
+bottleneck_size: 25
+add_cross_attention: False
+exp_name: CoQA_HisBERT
 epoches: 3
 weight_decay: 0.0
-learning_rate: 0.00003
+learning_rate: 0.00005
 warmup_steps: 1000
 adam_epsilon: 1.0e-6
 adam_beta1: 0.9
 adam_beta2: 0.999
-batch_size: 6
-gradient_accumulation_steps: 4
+batch_size: 8
+gradient_accumulation_steps: 3
 local_rank: -1
 seed: 42
 num_labels: 2
-dialog_labels: 2
-fp16: False
+dialog_labels: 4
+fp16: false
 max_grad_norm: 10.0
 logging_steps: 1000
 save_steps: 1000
-output_dir: ../CQAModel/QuAC/Bert-base/
+output_dir: ../CQAModel/CoQA/HisBERT/
 evaluate_during_training: True
 version_2_with_negative: True
 verbose_logging: True
-max_answer_length: 35
+max_answer_length: 17
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
-train_feature_file: ../preprocessing_files/bert/QuAC/base_train_HAE
-eval_feature_file: ../preprocessing_files/bert/QuAC/base_dev_HAE
-eval_json: ../dataset_local/QuAC/val_v0.2.json
+train_feature_file: ../preprocessing_files/bert/CoQA/clean_base_train_file_HAE
+eval_feature_file: ../preprocessing_files/bert/CoQA/clean_base_dev_file_HAE
+eval_json: ../dataset_local/CoQA/coqa-dev-v1.0.json
 
-model: BERTQA
+model: BERTQA_memoryHistory_coqa
 pretrained_name: bert-base-uncased
 pretrained_tokenizer: BertTokenizer
-
 
 model_config:
   pos_att_type: "c2p|p2c"
