--- a/bert-official-config-train/CoQA/train_config_original_bert_base.yaml
+++ b/bert-official-config-train/CoQA/train_config_original_bert_base.yaml
@@ -1,38 +1,39 @@
-bottleneck_size: 25
+bottleneck_size: 1
 add_cross_attention: False
-exp_name: DoQAsep_coqa_HAE_HistoryModule_standard
-epoches: 10
+exp_name: CoQA_Bert
+epoches: 3
 weight_decay: 0.0
-learning_rate: 0.00005
+learning_rate: 0.00003
 warmup_steps: 1000
-adam_epsilon: 1.0e-12
+adam_epsilon: 1.0e-6
 adam_beta1: 0.9
 adam_beta2: 0.999
 batch_size: 6
-gradient_accumulation_steps: 8
+gradient_accumulation_steps: 4
 local_rank: -1
 seed: 42
 num_labels: 2
-dialog_labels: 4
-fp16: false
-max_grad_norm: 1.0
+dialog_labels: 2
+fp16: False
+max_grad_norm: 10.0
 logging_steps: 1000
 save_steps: 1000
-output_dir: ../CQAModel/CoQA/Bert_CoQA_HistoryModule/sep-dev-in_training
+output_dir: ../CQAModel/CoQA/Bert-base/
 evaluate_during_training: True
 version_2_with_negative: True
 verbose_logging: True
-max_answer_length: 30
+max_answer_length: 17
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
 train_feature_file: ../preprocessing_files/bert/CoQA/clean_base_train_file_HAE
-eval_feature_file: ../preprocessing_files/bert/CoQA/clean_dev_file_HAE
-eval_json: ../dataset_local/coqa/coqa-dev-v1.0.json
+eval_feature_file: ../preprocessing_files/bert/CoQA/clean_base_dev_file_HAE
+eval_json: ../dataset_local/CoQA/coqa-dev-v1.0.json
 
-model: BERTQA_memory15_coqa
+model: BERTQA_coqa
 pretrained_name: bert-base-uncased
 pretrained_tokenizer: BertTokenizer
+
 
 model_config:
   pos_att_type: "c2p|p2c"
