--- a/bert-official-config-train/CoQA/train_config_original_bert_base_noq.yaml
+++ b/bert-official-config-train/CoQA/train_config_original_bert_base_noq.yaml
@@ -1,6 +1,6 @@
 bottleneck_size: 24
 add_cross_attention: false
-exp_name: QuAC_bert_base_uncased_noq
+exp_name: CoQA_bert_base_uncased_noq
 epoches: 3
 weight_decay: 0.0
 learning_rate: 0.00003
@@ -18,19 +18,19 @@ fp16: False
 max_grad_norm: 10.0
 logging_steps: 1000
 save_steps: 1000
-output_dir: ../CQAModel/QuAC/BERT_noq/
+output_dir: ../CQAModel/CoQA/BERT_noq/
 evaluate_during_training: True
 version_2_with_negative: True
 verbose_logging: True
-max_answer_length: 35
+max_answer_length: 17
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
-train_feature_file: ../preprocessing_files/bert/QuAC/base_train_HAE
-eval_feature_file: ../preprocessing_files/bert/QuAC/base_dev_HAE
-eval_json: ../dataset_local/QuAC/val_v0.2.json
+train_feature_file: ../preprocessing_files/bert/CoQA/clean_base_train_file_HAE
+eval_feature_file: ../preprocessing_files/bert/CoQA/clean_base_dev_file_HAE
+eval_json: ../dataset_local/CoQA/coqa-dev-v1.0.json
 
-model: BERTQA_original
+model: BERTQA_original_coqa
 pretrained_name: bert-base-uncased
 
 model_config:
