--- a/bert-official-config-train/QuAC/train_config_hisbert_base.yaml
+++ b/bert-official-config-train/QuAC/train_config_hisbert_base.yaml
@@ -1,36 +1,36 @@
 bottleneck_size: 16
 add_cross_attention: false
-exp_name: DoQAsep_hf_bert_HAE_seqlen512
-epoches: 5
+exp_name: QuAC_hisbert
+epoches: 3
 weight_decay: 0.0
 learning_rate: 0.00003
 warmup_steps: 1000
-adam_epsilon: 1.0e-12
+adam_epsilon: 1.0e-6
 adam_beta1: 0.9
 adam_beta2: 0.999
-batch_size: 3
-gradient_accumulation_steps: 16
+batch_size: 8
+gradient_accumulation_steps: 3
 local_rank: -1
 seed: 42
 num_labels: 2
 dialog_labels: 2
 fp16: False
-max_grad_norm: 1.0
+max_grad_norm: 10.0
 logging_steps: 1000
 save_steps: 1000
-output_dir: ../CQAModel/QuAC/Bert-base-HAE/sep-dev-in_training
+output_dir: ../CQAModel/QuAC/HisBERT/
 evaluate_during_training: True
 version_2_with_negative: True
 verbose_logging: True
-max_answer_length: 30
+max_answer_length: 35
 n_best_size: 20
 null_score_diff_threshold: 0.0
 do_lower_case: True
-train_feature_file: ../preprocessing_files/bert/QuAC/testing/base_train_truncated_HAE
-eval_feature_file: ../preprocessing_files/bert/QuAC/testing/base_dev_truncated_HAE
-eval_json: ../dataset_local/quac/val_v0.2.json
+train_feature_file: ../preprocessing_files/bert/QuAC/base_train_HAE
+eval_feature_file: ../preprocessing_files/bert/QuAC/base_dev_HAE
+eval_json: ../dataset_local/QuAC/val_v0.2.json
 
-model: BERTQA_memory_HAE
+model: BERTQA_memoryHistory
 pretrained_name: bert-base-uncased
 pretrained_tokenizer: BertTokenizer
 
