remove bug and refine eval config

--- a/bert-official-config-eval/DoQA/eval_config_hf_bert_base_cooking.yaml
+++ b/bert-official-config-eval/DoQA/eval_config_hf_bert_base_cooking.yaml
@@ -1,4 +1,4 @@
-saved_directory: ../CQAModel/DoQA/Bert_HF/
+saved_directory: ../CQAModel/DoQA/Bert_HHF/
 eval_file: ../preprocessing_files/bert/DoQA/base_test_file_cooking_HAE
 eval_json: ../dataset_local/DoQA/doqa_dataset/doqa-cooking-test-v2.1.json
 exp_name: eval_hf_bert_cooking
