--- a/bert-official-config-eval/DoQA/eval_config_hisbert_base_cooking.yaml
+++ b/bert-official-config-eval/DoQA/eval_config_hisbert_base_cooking.yaml
@@ -1,4 +1,4 @@
-saved_directory: ../CQAModel/DoQA/HisBERT_future/
-eval_file: ../preprocessing_files/bert/future/DoQA/base_test_file_cooking_HAE
+saved_directory: ../CQAModel/DoQA/HisBERT/
+eval_file: ../preprocessing_files/bert/DoQA/base_test_file_cooking_HAE
 eval_json: ../dataset_local/DoQA/doqa_dataset/doqa-cooking-test-v2.1.json
-exp_name: eval_hisbert_cooking_future
+exp_name: eval_hisbert_cooking
