add pretrained tokenizer

--- a/bert-official-config-train/CoQA/train_config_original_bert_base_noq.yaml
+++ b/bert-official-config-train/CoQA/train_config_original_bert_base_noq.yaml
@@ -32,6 +32,8 @@ eval_json: ../dataset_local/CoQA/coqa-dev-v1.0.json
 
 model: BERTQA_original_coqa
 pretrained_name: bert-base-uncased
+pretrained_tokenizer: BertTokenizer
+
 
 model_config:
   pos_att_type: "c2p|p2c"
