--- a/bert-official-config-train/QuAC/train_config_original_bert_base_noq.yaml
+++ b/bert-official-config-train/QuAC/train_config_original_bert_base_noq.yaml
@@ -32,6 +32,8 @@ eval_json: ../dataset_local/QuAC/val_v0.2.json
 
 model: BERTQA_original
 pretrained_name: bert-base-uncased
+pretrained_tokenizer: BertTokenizer
+
 
 model_config:
   pos_att_type: "c2p|p2c"
